Fixing bug 108232. Don't flush like mad in the form code now that form state is kept in the content elements and not in the frames. r=jkeiser@iname.com, sr=waterson@netscape.com